--- a/app/routes/gallery.scss
+++ b/app/routes/gallery.scss
@@ -27,10 +27,6 @@ details {
   }
 }
 
-.menu li:not(:first-child) {
-  margin-top: 10px;
-}
-
 .main {
   display: flex;
   flex-direction: column;
